# Aero

./: .gitignore  BUILD.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMUNITY.md  COMPLETION_STATUS.md  CONTRIBUTING.md  CONTROL_FLOW_SEMANTIC_IMPLEMENTATION.md  MIGRATION_GUIDE_v0.3.0.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATION_INTEGRATION.md  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES_v0.3.0.md  Roadmap.md  TASK_10_2_ENUM_PATTERN_IR_GENERATION_SUMMARY.md  TASK_10_2_INTEGRATION_TESTS_SUMMARY.md  TASK_10_3_COLLECTION_STRING_GENERATION_SUMMARY.md  TASK_11_BUILTIN_COLLECTIONS_LIBRARY_SUMMARY.md  TASK_12_2_OPTIMIZATION_SUMMARY.md  TASK_3_3_GENERIC_COLLECTION_AST_SUMMARY.md  TASK_4_3_GENERIC_COLLECTION_PARSING_SUMMARY.md  TASK_5_3_MEMORY_LAYOUT_CALCULATOR_SUMMARY.md  TASK_6_3_IMPLEMENTATION_SUMMARY.md  TASK_7_1_GENERIC_TYPE_INSTANTIATION_SUMMARY.md  TASK_7_2_GENERIC_METHOD_RESOLUTION_SUMMARY.md  TASK_8_2_ENUM_PATTERN_SEMANTIC_VALIDATION_SUMMARY.md  TASK_8_3_COLLECTION_STRING_SEMANTIC_VALIDATION_SUMMARY.md  TASK_9_2_ENUM_PATTERN_IR_GENERATION_SUMMARY.md  TASK_9_3_COLLECTION_GENERIC_IR_SUMMARY.md  TROUBLESHOOTING.md  Whitepaper.md  aero_grammar.md  aero_ownership_borrowing.md  aero_type_system.md  debug_array_test.aero  debug_match_test.aero  debug_match_test.ll  debug_simple_vec.aero  debug_vec_test.aero  (+57 more)
RFCs/: 0000-template.md  standard-library.md
src/compiler/: Cargo.toml  liblexer.rlib  main.rs  test_lexer_manual.rs
src/compiler/benches/: compilation_speed.rs  function_call_overhead.rs  io_operations.rs  lexer_only_benchmarks.rs  loop_performance.rs  performance_regression.rs  simple_benchmarks.rs
src/compiler/src/: accelerator.rs  ast.rs  ast_generic_collection_test.rs  code_generator.rs  code_generator_test.rs  compatibility.rs  conformance.rs  doc_generator.rs  error_test.rs  errors.rs  generic_resolver.rs  generic_resolver_test.rs  gpu.rs  graph_compiler.rs  ir.rs  ir_generator.rs  ir_generator_struct_test.rs  ir_generator_test.rs  lexer.rs  lexer_test.rs  lib.rs  lsp.rs  main.rs  module_resolver.rs  optimizations.rs  parser.rs  parser_enum_pattern_test.rs  parser_generic_collection_test.rs  parser_struct_simple_test.rs  parser_struct_test.rs  parser_test.rs  pattern_matcher.rs  performance_optimizations.rs  performance_optimizations_test.rs  profiler.rs  project_init.rs  quantization.rs  registry.rs  semantic_analyzer.rs  semantic_analyzer.rs.backup  (+5 more)
src/compiler/tests/: frontend_tests.rs  phase5_tests.rs
(+71 files in other folders)
