[package]
name = "compiler"
version = "0.2.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master" }
thiserror = "1.0"
miette = { version = "7.0", features = ["fancy"] }
ariadne = "0.4"

[[bin]]
name = "aero"
path = "src/main.rs"

[dev-dependencies]
insta = "1.34.0"
compiler = { path = "." }


