[package]
name = "compiler"
version = "0.4.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
md5 = "0.7"
thiserror = "1.0"
miette = { version = "7.0", features = ["fancy"] }
ariadne = "0.4"
# Phase 4: Data structures and advanced pattern matching dependencies
indexmap = "2.0"  # For ordered maps and memory-efficient collections
smallvec = "1.11"  # For stack-allocated vectors for small collections
bitvec = "1.0"  # For efficient bit manipulation in pattern matching
memoffset = "0.9"  # For calculating struct field offsets
bytemuck = "1.14"  # For safe transmutation and memory layout operations

[[bin]]
name = "aero"
path = "src/main.rs"

[dev-dependencies]
insta = "1.34.0"
compiler = { path = "." }
criterion = "0.5"

[[bench]]
name = "function_call_overhead"
harness = false

[[bench]]
name = "loop_performance"
harness = false

[[bench]]
name = "io_operations"
harness = false

[[bench]]
name = "compilation_speed"
harness = false

[[bench]]
name = "performance_regression"
harness = false

[[bench]]
name = "simple_benchmarks"
harness = false

[[bench]]
name = "lexer_only_benchmarks"
harness = false


